# geo-metallurgy-hak

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  llm.py
backend/app/api/: graph.py  mock_data.py
backend/app/extraction/: __init__.py  extractor.py  prompts.py  run_extraction.py
backend/app/graph/: convert.py  driver.py  init_db.py  load_chunks.py  loader.py  schema.cypher  wipe.py
backend/app/ingest/: authors.py  chunker.py  docx_parser.py  manifest.py  noise.py  parser.py  pdf_parser.py  pptx_parser.py  run.py  sections.py  source_meta.py  table_md.py  types.py
backend/app/retrieval/: embed_only.py  embedder.py  hybrid.py  text2cypher.py  vector_search.py
backend/app/schemas/: api.py  ontology.py
backend/app/storage/: __init__.py  s3.py
backend/app/synthesis/: answerer.py  prompts.py
backend/scripts/: filter_dedup_plan.py  graph_report.py  mark_reference_chunks.py  run_reference_queries.py  synth_sample.py  t2c_sample.py
backend/tests/: test_e2e.py  test_extraction.py  test_graph_loader.py  test_ingest.py  test_llm.py  test_retrieval_synthesis.py  test_s3_storage.py
backend/tests/fixtures/: retrieved_context.json  sample_matte.jsonl
cursor-docs/.cursor/rules/: 00-project.mdc  10-conventions.mdc
cursor-docs/docs/: ARCHITECTURE.md  DEMO.md  ONTOLOGY.md  TASK.md  TEAM.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
scripts/: llm_smoke.py  run_pipeline.py  seed_demo.py
(+14 files in other folders)
