[project]
name = "nauchny-klubok-backend"
version = "0.1.0"
description = "Научный клубок — backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "neo4j>=5.26.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "openai>=1.55.0",
    "sentence-transformers>=3.3.0",
    "FlagEmbedding>=1.2.0",
    "numpy>=1.26.0",
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "langdetect>=1.2.0",
    "pytesseract>=0.3.10",
    "tqdm>=4.66.0",
    "tenacity>=9.0.0",
    "httpx>=0.28.0",
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: tests requiring live Neo4j",
]
